--- a/public/chat.html
+++ b/public/chat.html
@@ -18,51 +18,52 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link href="normalize.css" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <nav class="navbar navbar-light" style="background-color: rgb(33, 33, 95)">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <h1 class="heading-1 nav__logo-txt">
-            <img src="img/logo-white.png" />
-            Chat App
-          </h1>
-        </a>
-        <div class="nav__right-part">
-          <form class="d-flex">
-            <input class="form-control me-2 input__search" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-light btn__search" type="submit">Search</button>
-          <button class="btn btn__notification">
-            <img
-              src="img/notification-white.png"
-              alt="notification"
-              class="nav__notification"
-            />
-          </button>
 
-          <button class="btn btn__user-photo">
-            <img
-              src="img/user-2.jpg"
-              alt="user photo"
-              class="nav__user-photo"
-            />
-          </button>
+    <div class="chat_page-container">
+      <nav class="navbar navbar-light" style="background-color: rgb(33, 33, 95)">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <h1 class="heading-1 nav__logo-txt">
+              <img src="img/logo-white.png" />
+              Chat App
+            </h1>
+          </a>
+          <div class="nav__right-part">
+            <form class="d-flex">
+              <input class="form-control me-2 input__search" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-light btn__search" type="submit">Search</button>
+            <button class="btn btn__notification">
+              <img
+                src="img/notification-white.png"
+                alt="notification"
+                class="nav__notification"
+              />
+            </button>
+  
+            <button class="btn btn__user-photo">
+              <img
+                src="img/user-2.jpg"
+                alt="user photo"
+                class="nav__user-photo"
+              />
+            </button>
+          </div>
         </div>
-      </div>
-    </nav>
-    <div class="chat_page-bg"></div>
-    <div class="container chat_page-container">
-      <div class="chat-right">
+      </nav>
+      <div class="chat-left">
         <h3 class="heading-4 messages-heading"><img src="img/messages-icon-white.png" alt="messages-icon" class="messages-icon"> Room Name</h3>
         <div class="card-sm"><p class="card-txt" id="room-name">Alex</p></div>
         <h3 class="heading-4 users-heading"><img src="img/users-icon-white.png" alt="users-icon" class="users-icon"> Users</h3>
         <div class="users"></div >
-        <!-- <div class="card-sm"><p class="card-txt">Mostafa</p></div>
-        <div class="card-sm"><p class="card-txt">Ahmed</p></div> -->
+     
       </div>
-      <div class="chat-left">
+      <div class="chat-right">
         <div class="messages-container">
+          
         </div>
         <form class="form sending-msg-form" for="send-msg" >
           <div  class="sending-msg">
