--- a/public/index.html
+++ b/public/index.html
@@ -18,11 +18,10 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link href="normalize.css" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
   </head>
-  <body>
-    <!--   rgb(33, 33, 95),
-    rgb(78, 15, 73)-->
+  <body class="landing">
     <div class="landing-bg"></div>
     <div class="container landing-container">
       <div class="landing-form__img"></div>
@@ -31,23 +30,29 @@
           <img src="img/logo-sm.png" alt="chat-app-logo" />
           <span> Chat App</span>
         </h1>
-        <label class="room-txt" for="room">Room<sup class="star">*</sup></label>
-        <select name="room" id="room" class="room">
-          <option value="alex">Alex</option>
-          <option value="madrid">Madrid</option>
-          <option value="london	">London</option>
-        </select>
-        <label class="username-txt" for="username"
-          >Username<sup class="star">*</sup></label
-        >
-        <input
-          type="text"
-          class="username"
-          name="username"
-          id="username"
-          placeholder="Username"
-          required
-        />
+        <div class="room-area">
+          <label class="room-txt" for="room"
+            >Room<sup class="star">*</sup></label
+          >
+          <select name="room" id="room" class="room">
+            <option value="alex">Alex</option>
+            <option value="madrid">Madrid</option>
+            <option value="london	">London</option>
+          </select>
+        </div>
+        <div class="username-area">
+          <label class="username-txt" for="username"
+            >Username<sup class="star">*</sup></label
+          >
+          <input
+            type="text"
+            class="username"
+            name="username"
+            id="username"
+            placeholder="Username"
+            required
+          />
+        </div>
         <button class="btn btn__start-chat" type="submit">Start Chat</button>
       </form>
     </div>
